main 로그인 관련 수정

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -10,7 +10,7 @@
                 <div class="headerRight">
                     <p class="hdTime"><em>09:59</em><a href="#" class="btnExtension">연장하기</a></p>
                     <p class="hdUser"><em>(주)이티스트</em>님 안녕하세요!</p>
-                    <p class="hdLogout"><a href="login.html" onclick="javascript:RemaLogoutCall();" title="로그아웃">logout</a></p>
+                    <p class="hdLogout"><a href="/logout" title="로그아웃">logout</a></p>
                 </div>
             </div>
         </div>
