--- a/src/main/resources/templates/layout/full-page.html
+++ b/src/main/resources/templates/layout/full-page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Pentaworks Service</title>
     <!-- cmmnFragment -->
-    <th:block th:replace="fragment/cmmn :: cmmnFragment" ></th:block>
+    <th:block th:replace="fragment/fp-cmmn :: fpCmmnFragment" ></th:block>
 </head>
 
 <body>
